# sites

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  app.json  better.html  bun.lockb  ci-build-deploy.sh  dbconfig.yml  docker-compose.yaml  go.mod  go.sum  index.html  lu1sh.html  main.go  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts
app/: layout.tsx  page.tsx
app/(routes)/: page.tsx
app/(routes)/about/: page.tsx
app/(routes)/data/: page.tsx
app/(routes)/projects/: page.tsx
app/components/: Arrow.tsx  BottomNav.tsx  GlassCard.tsx  VisitorsGraph.tsx
assets/: index.css
dbpkg/: db.go
example/: index.html
htmx-go-port/: go.mod  main.go
htmx-go-port/static/: contact.html  index.html
lu1.sh/: index.html
lu1.sh/boring/: index.html
next-port/: package-lock.json  package.json
next-port/app/: globals.css  page.tsx
pages/: homepage.go  index.go  portfolioStats.go  recycleCloud.go
pages/templates/: index.html  recycleCloudLetter.html  stats.html
service/: service.go
src/: app.d.ts  app.html  db.rs  hooks.server.js  hooks.server.ts  main.rs  ws_handler.rs
src/components/: Arrow.svelte  BottomNav.svelte  GlassCard.svelte  GreyCard.svelte  MobileWrapper.svelte  SwipeWrapper.svelte
src/lib/: Arrow.svelte  BottomNav.svelte  GlassCard.svelte  GreyCard.svelte  VisitorsGraph.svelte  visitor-log.js  visitorLog.ts
src/routes/: +layout.svelte  +page.svelte
static/: index.css
templates/: index.html  recycleCloudLetter.html  stats.html
types/: types.go
(+17 files in other folders)
