[package]
name = "portfolio-site"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = "0.11"
axum = "0.7.2"
chrono = { version = "0.4" }
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }